--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "vmvp backend API",
   "main": "app.js",
   "scripts": {
-    "start": "NODE_ENV=production node server",
+    "start": "NODE_ENV=production node app.js",
     "dev": "nodemon app.js"
   },
   "repository": {
