--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/Gahamanyiced/Backend-vmvp.git"
   },
-  "author": "Gahamanyi Cedric",
+  "author": "Benjamin I",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Gahamanyiced/Backend-vmvp/issues"
